# forge

./: .env.example  .gitignore  README.md  pyproject.toml  run_forge.py  sandbox_patch.py
backend/: __init__.py  app.py
benchmarks/: multi_agent_runtime_benchmark.py  repointel_benchmark.py
forge.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
scripts/: run_orchestration_demo.py  smoke_test_multi_agent_runtime.py  smoke_test_repo_intel.py  test_worktrees.py  verify_repo_intelligence.py
tests/: test_artifact_compression.py  test_artifact_exchange.py  test_artifact_replay.py  test_artifact_store.py  test_autonomous_artifacts.py  test_autonomous_courtroom.py  test_autonomous_patch.py  test_autonomous_patch_parser_integration.py  test_autonomous_repair.py  test_autonomy.py  test_binding.py  test_candidate.py  test_chat_api.py  test_coder_agent.py  test_cognition.py  test_cognition_expansion.py  test_consensus.py  test_context_budget.py  test_control_center_api.py  test_convergence.py  test_convergence_loop.py  test_courtroom.py  test_courtroom_engine.py  test_courtroom_pipeline.py  test_cross_role_context.py  test_debate.py  test_diff_synthesizer.py  test_execution.py  test_execution_aware_judge.py  test_execution_graph.py  test_execution_review.py  test_execution_runner.py  test_fabric.py  test_file_editor.py  test_gitops.py  test_global_convergence.py  test_judge.py  test_lifecycle.py  test_live_cognition.py  test_live_patch_generation.py  (+41 more)
(+202 files in other folders)
