[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.2.0"
description = "Forge local inference and model serving layer"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136.0",
  "httpx>=0.28.0",
  "networkx>=3.6.0",
  "orjson>=3.11.0",
  "pathspec>=0.12.1",
  "pydantic-settings>=2.14.0",
  "qdrant-client>=1.15.0",
  "sentence-transformers>=5.4.0",
  "transformers>=5.8.0",
  "tree-sitter>=0.25.0",
  "tree-sitter-go>=0.25.0",
  "tree-sitter-javascript>=0.25.0",
  "tree-sitter-python>=0.25.0",
  "tree-sitter-rust>=0.24.0",
  "tree-sitter-typescript>=0.23.2",
  "uvicorn>=0.46.0",
  "vllm>=0.20.2",
  "watchdog>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=1.1.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "live: requires live local inference server",
]